src/minikube-test-application/minikube-test-application.Ingress-GKE.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minikube-test-application
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /foo
            backend:
              service:
                name: foo-service
                port:
                  number: 8080
          - pathType: Prefix
            path: /bar
            backend:
              service:
                name: bar-service
                port:
                  number: 8080
